# video-frame-fuse

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  TODO
.github/workflows/: main.yml
docs/casts/: README.md  shift-time.py
docs/casts/black-and-white/: black-and-white.1.cast  black-and-white.2.cast
docs/casts/greyscale/: greyscale.cast
docs/casts/mount/: mount.cast
docs/casts/original/: original.cast
docs/casts/unmount/: unmount.cast
resources/: initialise.sh
scripts/test/: run-acceptance-tests.sh  run-style-check.sh  run-unit-tests.sh
spec/: video-frame-fuse_spec.sh
spec/resources/: README.md
spec/scripts/image/: get-image-colours.py
src/: cli.rs  configuration.rs  frames.rs  fuse_video.rs  main.rs  manifest.rs  nodes.rs  video_processing.rs
src/file_system/: data.rs  manifest.rs  mod.rs  nodes.rs
src/fuse_fs/: fs.rs  mod.rs  nodes.rs
src/fuse_fs/models/: config.rs  file.rs  manifest.rs  mod.rs  nodes.rs
